--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.Localization/Strings.resx
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.Localization/Strings.resx
@@ -8,7 +8,7 @@
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
-              <xsd:sequence>
+              <xsd:sequence> 
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
               <xsd:attribute name="name" use="required" type="xsd:string" />
@@ -66,7 +66,7 @@
   </data>
 
    <data name="AppName" xml:space="preserve">
-    <value>NControlDemo.Forms.Xamarin.Plugins</value>
+    <value>NControlDemo</value>
     <comment>App Name</comment>
   </data>
 
